syntax = "proto3";

option csharp_namespace = "eDoxa.Clans.Grpc.Protos";

import "google/protobuf/any.proto";

service GamesService {}

message StatusDto {
  int32 code = 1;
  string message = 2;
  google.protobuf.Any details = 3;
}